k8s/gatewayapi/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vrm-gateway
  namespace: video-request-manager
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "vrm.example.com"
      allowedRoutes:
        namespaces:
          from: Same
